--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -1,90 +1,123 @@
 .about__container {
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    column-gap: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* text-align: center; */
 }
 
 .about__img {
-    width: 350px;
-    border-radius: 1.5rem;
-    justify-self: center;
+  width: 350px;
+  border-radius: 1.5rem;
+  justify-self: center;
 }
 
 .about__info {
-    grid-template-columns: repeat(3, 140px);
-    gap: 0.5rem;
-    margin-bottom: var(--mb-2);
+  grid-template-columns: repeat(3, 140px);
+  gap: 0.5rem;
+  margin-bottom: var(--mb-2);
 }
 
 .about__box {
-    background-color: var(--container-color);
-    border: 1px solid rgba(0, 0, 0, 12);
-    border-radius: 0.75rem;
-    text-align: center;
-    padding: 1rem 1.25rem;
+  background-color: var(--container-color);
+  border: 1px solid rgba(0, 0, 0, 12);
+  border-radius: 0.75rem;
+  text-align: center;
+  padding: 1rem 1.25rem;
 }
 
 .about__icon {
-    font-size: 1.5rem;
-    color: var(--title-color);
-    margin-bottom: var(--mb-0-5);
+  font-size: 1.5rem;
+  color: var(--title-color);
+  margin-bottom: var(--mb-0-5);
 }
 
 .about__title {
-    font-size: var(--small-font-size);
-    font-weight: var(--font-medium);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
 }
 
 .about__subtitle {
-    font-size: var(--smaller-font-size);
+  font-size: var(--smaller-font-size);
 }
 
 .about__description {
-    padding: 0 4rem 0 0;
-    margin-bottom: var(--mb-2-5);
+  width: 90%;
+  padding: 0 4rem 0 0;
+  margin-bottom: var(--mb-2-5);
+  text-align: center;
+  padding-right: 0px;
 }
 
 /* BREAK POINTS */
-@media screen and (max-width: 992px) {  
-    .about__container {
-        grid-template-columns: 1fr;
-        row-gap: 2.5rem;
-    }
+@media screen and (max-width: 992px) {
+  .about__container {
+    grid-template-columns: 1fr;
+    row-gap: 2.5rem;
+  }
 
-    .about__img {
-        width: 220px;
-    }
+  .about__img {
+    width: 220px;
+  }
 
-    .about__box {
-        padding: 0.75rem 0.5rem;
-    }
+  .about__box {
+    padding: 0.75rem 0.5rem;
+  }
 
-    .about__data {
-        text-align: center;
-    }
+  .about__data {
+    text-align: center;
+  }
 
-    .about__info {
-        justify-content: center;
-    }
+  .about__info {
+    justify-content: center;
+  }
 
-    .about__description {
-        padding: 0 5rem;
-        margin-bottom: 2rem;
-    }
+  .about__description {
+    padding: 0 5rem;
+    margin-bottom: 2rem;
+  }
 }
 
 @media screen and (max-width: 576px) {
-    .about__info {
-        grid-template-columns: repeat(3, 1fr);
-    }
+  .about__info {
+    grid-template-columns: repeat(3, 1fr);
+  }
 
-    .about__description {
-        padding: 0;
-    }
+  .about__description {
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 350px) {
-   .about__info {
+  .about__info {
     grid-template-columns: repeat(2, 1fr);
-   }
+  }
+}
+
+.buttons {
+  width: 80%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.button-outlline {
+  display: inline-block;
+  color: var(--title-color);
+  padding: 1.25rem 2rem;
+  border-radius: 1rem;
+  font-weight: var(--font-medium);
+  border-style: solid;
+  border-width: 2px;
+  border-color: var(--title-color);
+}
+
+@media screen and (max-width: 576px) {
+  .button-outlline {
+    display: none;
+    padding: 0px;
+  }
+  .button {
+    display: none;
+    padding: 0px;
+  }
 }
